force-app/main/default/objects/ConnectWOProduct__c/ConnectWOProduct__c.object-meta.xml
<CustomObject>
    <label>W/O+Product</label>
    <nameField>
        <displayFormat>WP-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>W/W/O+Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>