force-app/main/default/objects/ConnectWOProduct__c/fields/BuyingWeightUnit__c.field-meta.xml
<CustomField>
    <fullName>BuyingWeightUnit__c</fullName>
    <formula>text(ProductID__r.BuyingWeightUnit__c)</formula>
    <label>BUYING WEIGHT UNIT</label>
    <type>Text</type>
</CustomField>