force-app/main/default/objects/ConnectWOProduct__c/fields/CommercialValuePerUnitUSD__c.field-meta.xml
<CustomField>
    <fullName>CommercialValuePerUnitUSD__c</fullName>
    <label>COMMERCIAL VALUE PER UNIT(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>