force-app/main/default/objects/ConnectWOProduct__c/fields/GrossWeightKG__c.field-meta.xml
<CustomField>
    <fullName>GrossWeightKG__c</fullName>
    <label>GROSS WEIGHT(KG)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>