force-app/main/default/objects/ConnectWOProduct__c/fields/NETWeightKG__c.field-meta.xml
<CustomField>
    <fullName>NETWeightKG__c</fullName>
    <label>NET WEIGHT(KG)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>