force-app/main/default/objects/ConnectWOProduct__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <formula>ProductID__r.ProductName__c</formula>
    <label>PRODUCT NAME</label>
    <type>Text</type>
</CustomField>