force-app/main/default/objects/ConnectWOProduct__c/fields/WorkOrderID__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderID__c</fullName>
    <label>WORK ORDER ID</label>
    <referenceTo>WorkOrder__c</referenceTo>
    <relationshipName>CONNECT_WORK_ORDER_PRODUCT</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>